# openai-llm-benchmark

./: LICENSE  README.md  openai-llm-benchmark.py  pyproject.toml
results/: benchmark-results.csv  plot_results.py
